패키지 이름 healthcareapplication으로 통일

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Testinggg" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.healthCareApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Testinggg" parent="Base.Theme.Testinggg" />
+    <style name="Theme.healthCareApplication" parent="Base.Theme.healthCareApplication" />
 </resources>
