loading, login, fragment
좀더 직관적인 ui로 개선

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".SearchFragment">
+    tools:context=".fragments.SearchFragment">
 
     <!-- 검색 입력 필드 -->
     <EditText
