메인화면 구성
메인화면, 데이터베이스 조작 ..

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,8 +37,7 @@
                         <LinearLayout
                             android:id="@+id/listView"
                             android:layout_width="391dp"
-                            android:layout_height="382dp"
-                            android:background="#9DCFFF"
+                            android:layout_height="match_parent"
                             android:orientation="vertical"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -55,8 +54,7 @@
                         <TextView
                             android:id="@+id/right_text"
                             android:layout_width="170dp"
-                            android:layout_height="200dp"
-                            android:text="Your text here" />
+                            android:layout_height="200dp"/>
 
                         <Button
                             android:id="@+id/button2"
@@ -176,7 +174,7 @@
                         android:src="@drawable/ic_calendar" />
 
                     <ImageView
-                        android:id="@+id/opton"
+                        android:id="@+id/option"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_weight="1"
