--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -70,28 +70,28 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
-            android:id="@+id/hometap"
+            android:id="@+id/Chometap"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
             android:src="@drawable/ic_calendar"/>
 
         <ImageView
-            android:id="@+id/calender"
+            android:id="@+id/Ccalender"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
             android:src="@drawable/ic_calendar" />
 
         <ImageView
-            android:id="@+id/community"
+            android:id="@+id/Ccommunity"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
             android:src="@drawable/ic_calendar" />
 
         <ImageView
-            android:id="@+id/option"
+            android:id="@+id/Coption"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
