--- a/app/src/main/res/drawable/background_radius.xml
+++ b/app/src/main/res/drawable/background_radius.xml
@@ -4,8 +4,11 @@
     android:shape="rectangle" >
     <solid android:color="#ffffff" />
     <corners
-        android:bottomLeftRadius="15dp"
-        android:bottomRightRadius="15dp"
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp"></corners>
+        android:bottomLeftRadius="30dp"
+        android:bottomRightRadius="30dp"
+        android:topLeftRadius="30dp"
+        android:topRightRadius="30dp"></corners>
+    <stroke
+        android:width="1dp"
+        android:color="#000000"/>
 </shape>
