--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,8 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".fragments.CalendarFragment">
+            tools:context=".fragments.CalendarFragment"
+            android:background="#e9ecef">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -26,7 +27,9 @@
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.41">
+                    app:layout_constraintVertical_bias="0.41"
+                    android:background="@drawable/background_radius"
+                    android:layout_marginRight="5dp">
                     <ScrollView
                         android:id="@+id/scrollView1"
                         android:layout_width="150dp"
@@ -49,7 +52,8 @@
                     <LinearLayout
                         android:layout_width="150dp"
                         android:layout_height="250dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_marginLeft="10dp">
 
                         <TextView
                             android:id="@+id/right_text"
@@ -60,6 +64,8 @@
                             android:id="@+id/button2"
                             android:layout_width="120dp"
                             android:layout_height="50dp"
+                            android:gravity="center"
+                            android:layout_gravity="center"
                             android:text="추가하기" />
 
                     </LinearLayout>
@@ -73,7 +79,8 @@
                     android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:background="@drawable/background_radius">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -103,8 +110,8 @@
                 </LinearLayout>
                 <TextView
                     android:id="@+id/tvDate"
-                    android:layout_width="141dp"
-                    android:layout_height="37dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="58dp"
                     android:text="TextView"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -115,8 +122,8 @@
                     app:layout_constraintVertical_bias="0.047" />
                 <TextView
                     android:id="@+id/textView2"
-                    android:layout_width="98dp"
-                    android:layout_height="29dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:text="오늘의 식단"
                     app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
