게시글 업로드
게시글 업로드 수정

--- a/app/src/main/res/layout/fragment_contentclick.xml
+++ b/app/src/main/res/layout/fragment_contentclick.xml
@@ -27,11 +27,20 @@
         <TextView
             android:id="@+id/contentcontent"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="450dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:text="@string/hello_blank_fragment" />
+        <EditText
+            android:id="@+id/pwd"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
+        <Button
+            android:id="@+id/delete"
+            android:text="삭제"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 </layout>
