--- a/app/src/main/res/layout/fragment_community_write.xml
+++ b/app/src/main/res/layout/fragment_community_write.xml
@@ -15,22 +15,40 @@
             android:layout_height="wrap_content"
             android:hint="Title"
             android:textSize="18sp" />
-
-        <EditText
-            android:id="@+id/content"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Content"
-            android:textSize="18sp"
-            android:layout_marginTop="16dp"
-            android:minHeight="200dp" />
-
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/imageArea"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+                <EditText
+                    android:id="@+id/content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Content"
+                    android:textSize="18sp"
+                    android:layout_marginTop="16dp"
+                    android:minHeight="200dp" />
+            </LinearLayout>
+        </ScrollView>
         <Button
             android:id="@+id/writeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Post" />
+        <Button
+            android:id="@+id/ImageBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="사진 추가" />
 
     </LinearLayout>
 </ScrollView>
