--- a/app/src/main/res/layout/fragment_contentclick.xml
+++ b/app/src/main/res/layout/fragment_contentclick.xml
@@ -1,46 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.contentclickFragment"
         android:orientation="vertical">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/contenttitle"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:text="title"
-            android:gravity="center"
-            android:textSize="30dp"/>
+    <TextView
+        android:id="@+id/contenttitle"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="title"
+        android:textSize="30dp"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:visibility="invisible"
+        android:id="@+id/contentset"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:text="모양 수정"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:id="@+id/contenttime"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:text="title"
+            android:layout_height="30dp"
+            android:text="time"
             android:gravity="right"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/black"/>
+        <ScrollView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
         <TextView
             android:id="@+id/contentcontent"
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:text="@string/hello_blank_fragment" />
-        <EditText
-            android:id="@+id/pwd"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"/>
-        <Button
-            android:id="@+id/delete"
-            android:text="삭제"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+                <ImageView
+                    android:id="@+id/getImage"
+                    android:layout_margin="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"/>
+
+            </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 </layout>
